--- a/HTML-study/01-常见文本标签.html
+++ b/HTML-study/01-常见文本标签.html
@@ -9,6 +9,7 @@
     <h1>一级标签</h1>
     <h2>二级标签</h2>
     <p>这是一个段落标签</p>
+    <hr>                        //分割线标签
     <p id = "describe" class = "section"> 标签的id,class属性</p>
     <p>
         更改文本样式：
@@ -18,6 +19,7 @@
         <s>删除线</s>
 
     </p>
+    <!-- /p是分化线，是单标签 -->
     <ul>
         <li>无序列表元素1</li>
         <li>无序列表元素2</li>
