--- a/HTML-study/17-标签.html
+++ b/HTML-study/17-标签.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <!-- 
-    label:
+    label: 作用：增大点击范围
         写法一：
          label标签只包裹内容，不包裹表单控件
          设置label标签的for属性值和表单控件的id属性值相同
@@ -15,7 +15,6 @@
          写法二：
           label包裹 文字 和 表单控件
     -->
-         写法一：
          <input type="radio" name="gender" id="man">
          <label for="man">man</label>
          <!-- <input type="radio" name="gender" id="woman">
