feat: 添加表格标题元素说明
在 HTML 表格基本用法注释中补充了 caption 元素的使用说明，完善表格相关标签的文档

--- a/02-HTML进阶/learn/13.1-表格-基本用法.html
+++ b/02-HTML进阶/learn/13.1-表格-基本用法.html
@@ -12,6 +12,7 @@
         tr      行
         th      表头单元格  字体自动加粗，居中
         td      内容单元格
+        <caption>表格标题</caption>
     -->
         <table border="1">
             <tr>
