style(css): 为浮动元素父容器添加背景色
- 在浮动元素父容器的 div 元素中添加橙色背景色样式
- 保持结构不变，仅新增内联样式以增强视觉效果

--- a/03-CSS基础/12浮动/0502解决父元素高度塌陷.html
+++ b/03-CSS基础/12浮动/0502解决父元素高度塌陷.html
@@ -65,7 +65,7 @@
             <!-- 若所有元素皆为浮动，添加一下的div使得上述元素撑起父元素 -->
             <!-- <div class="magic" style = "clear:both;"></div> -->
         </div>
-        <div class="lorem">
+        <div class="lorem" style="background-color: orange;">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor illum
             ea aliquam nostrum voluptas error quos consequuntur aliquid, optio
             at saepe delectus aspernatur provident deleniti modi corrupti
