style(header): 美化顶部导航条及搜索栏样式
- 统一调整顶部导航条列表项的内边距和边框样式
- 添加页眉区域高度设置，确保布局一致
- 新增搜索栏表单样式，调整输入框和按钮尺寸及样式
- 按钮背景添加搜索图标，提升交互体验
- 将搜索区域从textarea改为表单包含input和button元素，符合语义规范
- 使用CSS区域注释提升代码结构清晰度

--- a/尚品汇项目开发/html/index.html
+++ b/尚品汇项目开发/html/index.html
@@ -49,11 +49,10 @@
                     />
                 </div>
                 <div class="search rightfix">
-                    <textarea name="search" id="search"></textarea>
-                    <img
-                        src="/Volumes/study/05-webStudy/web-study/尚品汇项目开发/resources/serch_icon.png"
-                        alt="搜索"
-                    />
+                    <form action="#">
+                        <input type="text">
+                         <button></button>
+                    </form>
                 </div>
             </div>
         </div>
