--- a/尚品汇项目开发/html/index.html
+++ b/尚品汇项目开发/html/index.html
@@ -56,5 +56,24 @@
                 </div>
             </div>
         </div>
+
+        <!-- 头部导航栏 -->
+         <div class="head_nav">
+            <div class="container clearfix">
+                <div class="all_types leftfix">全部商品分类</div>
+                <ul class="head_list leftfix">
+                    <li><a href="#">尚品超市</a></li>
+                    <li><a href="#">优惠卷</a></li>
+                    <li><a href="#">买啥</a></li>
+                    <li><a href="#">尚品家电</a></li>
+                    <li><a href="#">尚品生鲜</a></li>
+                    <li><a href="#">PLUS会员</a></li>
+                    <li><a href="#">进口好物</a></li>
+                    <li><a href="#">品牌闪购</a></li>
+                    <li><a href="#">拍卖</a></li>
+                    <li><a href="#">五金商店</a></li>
+                </ul>
+            </div>
+         </div>
     </body>
 </html>
