--- a/尚品汇项目开发/html/index.html
+++ b/尚品汇项目开发/html/index.html
@@ -50,15 +50,15 @@
                 </div>
                 <div class="search rightfix">
                     <form action="#">
-                        <input type="text">
-                         <button></button>
+                        <input type="text" />
+                        <button></button>
                     </form>
                 </div>
             </div>
         </div>
 
         <!-- 头部导航栏 -->
-         <div class="head_nav">
+        <div class="head_nav">
             <div class="container clearfix">
                 <div class="all_types leftfix">全部商品分类</div>
                 <ul class="head_list leftfix">
@@ -74,6 +74,215 @@
                     <li><a href="#">五金商店</a></li>
                 </ul>
             </div>
-         </div>
+        </div>
+
+        <!-- 中部主要内容区 -->
+        <div class="main_content">
+            <div class="container clearfix">
+                <div class="left_content leftfix">
+                    <ul>
+                        <li>
+                            <a href="#">手机/运营商/数码</a>
+                            <div class="second_menu">
+                                <dl class="clearfix">
+                                    <dt class="leftfix">电子书刊</dt>
+                                    <dd><a href="#">网络原创</a></dd>
+                                    <dd><a href="#">电子书</a></dd>
+                                    <dd><a href="#">数字杂志</a></dd>
+                                    <dd><a href="#">多媒体图书</a></dd>
+                                </dl>
+                                <dl class="clearfix">
+                                    <dt><a href="#">音像</a></dt>
+                                    <dd><a href="#">音乐</a></dd>
+                                    <dd><a href="#">影视</a></dd>
+                                    <dd><a href="#">教育音像</a></dd>
+                                </dl>
+                                <dl class="clearfix">
+                                    <dt><a href="#">英文原版</a></dt>
+                                    <dd><a href="#">少儿</a></dd>
+                                    <dd><a href="#">商务投资</a></dd>
+                                    <dd><a href="#">英语学习考试</a></dd>
+                                    <dd><a href="#">文学</a></dd>
+                                    <dd><a href="#">传记</a></dd>
+                                    <dd><a href="#">励志</a></dd>
+                                </dl>
+                                <dl class="clearfix">
+                                    <dt><a href="#">文艺</a></dt>
+                                    <dd><a href="#">小说</a></dd>
+                                    <dd><a href="#">文学</a></dd>
+                                    <dd><a href="#">青春文学</a></dd>
+                                    <dd><a href="#">传记</a></dd>
+                                    <dd><a href="#">艺术</a></dd>
+                                </dl>
+                                <dl class="clearfix">
+                                    <dt><a href="#">少儿</a></dt>
+                                    <dd><a href="#">胎教</a></dd>
+                                    <dd><a href="#">0-2岁</a></dd>
+                                    <dd><a href="#">3-6岁</a></dd>
+                                    <dd><a href="#">7-10岁</a></dd>
+                                    <dd><a href="#">11-14岁</a></dd>
+                                </dl>
+                                <dl class="clearfix">
+                                    <dt><a href="#">人文社科</a></dt>
+                                    <dd><a href="#">历史</a></dd>
+                                    <dd><a href="#">哲学</a></dd>
+                                    <dd><a href="#">国学</a></dd>
+                                    <dd><a href="#">政治/军事</a></dd>
+                                    <dd><a href="#">法律</a></dd>
+                                    <dd><a href="#">人文社科</a></dd>
+                                    <dd><a href="#">心理学</a></dd>
+                                    <dd><a href="#">文化</a></dd>
+                                    <dd><a href="#">社会科学</a></dd>
+                                </dl>
+                                <dl class="clearfix">
+                                    <dt><a href="#">经管励志</a></dt>
+                                    <dd><a href="#">经济</a></dd>
+                                    <dd><a href="#">金融与投资</a></dd>
+                                    <dd><a href="#">管理</a></dd>
+                                    <dd><a href="#">励志与成功</a></dd>
+                                </dl>
+                                <dl class="clearfix">
+                                    <dt><a href="#">生活</a></dt>
+                                    <dd><a href="#">健康与保健</a></dd>
+                                    <dd><a href="#">家庭与育儿</a></dd>
+                                    <dd><a href="#">旅游</a></dd>
+                                    <dd><a href="#">烹饪美食</a></dd>
+                                </dl>
+                                <dl class="clearfix">
+                                    <dt><a href="#">科技</a></dt>
+                                    <dd><a href="#">工业技术</a></dd>
+                                    <dd><a href="#">科普读物</a></dd>
+                                    <dd><a href="#">建筑</a></dd>
+                                    <dd><a href="#">医学</a></dd>
+                                    <dd><a href="#">科学与自然</a></dd>
+                                    <dd><a href="#">计算机与互联网</a></dd>
+                                    <dd><a href="#">电子通信</a></dd>
+                                </dl>
+                                <dl class="clearfix">
+                                    <dt><a href="#">教育</a></dt>
+                                    <dd><a href="#">中小学教辅</a></dd>
+                                    <dd><a href="#">教育与考试</a></dd>
+                                    <dd><a href="#">外语学习</a></dd>
+                                    <dd><a href="#">大中专教材</a></dd>
+                                    <dd><a href="#">科学与自然</a></dd>
+                                    <dd><a href="#">字典词典</a></dd>
+                                </dl>
+                                <dl class="clearfix">
+                                    <dt><a href="#">艺术与收藏</a></dt>
+                                    <dd><a href="#">经济管理</a></dd>
+                                    <dd><a href="#">文化与艺术</a></dd>
+                                </dl>
+                                <dl class="clearfix">
+                                    <dt><a href="#">其他</a></dt>
+                                    <dd><a href="#">工具书</a></dd>
+                                    <dd><a href="#">杂志期刊</a></dd>
+                                    <dd><a href="#">套装书</a></dd>
+                                    <dd><a href="#">打折图书</a></dd>
+                                </dl>
+                            </div>
+                        </li>
+                        <li><a href="#">电脑/办公</a></li>
+                        <li><a href="#">家具/家居/家装/厨具</a></li>
+                        <li><a href="#">男装/女装/童装/内衣</a></li>
+                        <li><a href="#">美妆/个护清洁/宠物</a></li>
+                        <li><a href="#">女鞋/鞋包/钟表/珠宝</a></li>
+                        <li><a href="#">男鞋/运动/户外</a></li>
+                        <li><a href="#">房产/汽车/汽车用品</a></li>
+                        <li><a href="#">母婴/玩具乐器</a></li>
+                        <li><a href="#">食品/酒类/生鲜/特产</a></li>
+                        <li><a href="#">艺术/礼品鲜花/农资绿植</a></li>
+                        <li><a href="#">医药保健/计生情趣</a></li>
+                        <li><a href="#">图书/文娱/教育/电子书</a></li>
+                        <li><a href="#">机票/酒店/旅游/生活</a></li>
+                        <li><a href="#">众筹/白条/保险/企业金融</a></li>
+                        <li><a href="#">安装/维修/清洗/二手</a></li>
+                    </ul>
+                </div>
+                <div class="banner leftfix">
+                    <img src="../resources/banner主图.png" />
+                </div>
+                <!-- 整个最右侧 -->
+                <div class="slide_other leftfix">
+                    <!-- 上方的消息 -->
+                    <div class="news clearfix">
+                        <!-- 上半部分-更多 -->
+                        <div class="title clearfix">
+                            <div class="left_name leftfix">尚品快报</div>
+                            <a href="#" class="news_right rightfix"
+                                >更多&nbsp;&gt</a
+                            >
+                        </div>
+
+                        <!-- 下半部分具体内容 -->
+                        <div class="news_content">
+                            <ul>
+                                <li><a href="#">[特惠] 毛衣+直筒裤，才是YYDS。</a></li>
+                                <li><a href="#">[特惠] 超大容量的满足感来啥子于</a></li>
+                                <li><a href="#">[特惠] 每日一件，衣柜满到塞不下。</a></li>
+                                <li><a href="#">[特惠] 媳妇儿再买，我就疯给他看。</a></li>
+                            </ul>
+                        </div>
+                    </div>
+<!-- 注意！！！！！！！一下的图片应该使用精灵图位移来实现！ -->
+                    <!-- 下方的导航区 -->
+                    <div class="other_nav">
+                        <ul class="other_nav_list clearfix">
+                            <li>
+                                <div><img src="../resources/icon_话费_nor.png"></div>
+                                <a href="#">话费</a>
+                            </li>
+                            <li>
+                                <div><img src="../resources/icon_huoche.png"></div>
+                                <a href="#">火车票</a>
+                            </li>
+                            <li>
+                                <div><img src="../resources/icon_加油卡_nor.png"></div>
+                                <a href="#">加油卡</a>
+                            </li>
+                            <li>
+                                <div><img src="../resources/icon_白条_nor.png"></div>
+                                <a href="#">白条</a>
+                            </li>
+                        </ul>
+                        <ul class="other_nav_list clearfix">
+                            <li>
+                                <div><img src="../resources/icon_电影票_nor.png"></div>
+                                <a href="#">电影票</a>
+                            </li>
+                            <li>
+                                <div><img src="../resources/icon_酒店_nor.png"></div>
+                                <a href="#">酒店</a>
+                            </li>
+                            <li>
+                                <div><img src="../resources/icon_理财_nor.png"></div>
+                                <a href="#">理财</a>
+                            </li>
+                            <li>
+                                <div><img src="../resources/icon_机票_nor.png"></div>
+                                <a href="#">机票</a>
+                            </li>
+                        </ul>
+                        <ul class="other_nav_list clearfix">
+                            <li>
+                                <div><img src="../resources/icon_礼品卡_nor.png"></div>
+                                <a href="#">礼品卡</a>
+                            </li>
+                            <li>
+                                <div><img src="../resources/icon_彩票_nor.png"></div>
+                                <a href="#">彩票</a>
+                            </li>
+                            <li>
+                                <div><img src="../resources/icon_游戏_nor.png"></div>
+                                <a href="#">游戏</a>
+                            </li>
+                            <li>
+                                <div><img src="../resources/icon_众筹_nor.png"></div>
+                                <a href="#">众筹</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
