feat(layout): 增加图片展示区和家用电器楼层样式结构
- 添加图片展示区的HTML结构及对应CSS样式，实现图片横向排列和间距控制
- 新增家用电器楼层区，包括楼层头部导航和多项商品展示布局
- 优化各商品区尺寸及边框样式，增强视觉层次感
- 调整底部导航图标的HTML结构，统一img标签格式，便于维护
- 改善代码格式，统一缩进和换行，提高代码可读性

--- a/尚品汇项目开发/html/index.html
+++ b/尚品汇项目开发/html/index.html
@@ -216,70 +216,196 @@
                         <!-- 下半部分具体内容 -->
                         <div class="news_content">
                             <ul>
-                                <li><a href="#">[特惠] 毛衣+直筒裤，才是YYDS。</a></li>
-                                <li><a href="#">[特惠] 超大容量的满足感来啥子于</a></li>
-                                <li><a href="#">[特惠] 每日一件，衣柜满到塞不下。</a></li>
-                                <li><a href="#">[特惠] 媳妇儿再买，我就疯给他看。</a></li>
+                                <li>
+                                    <a href="#"
+                                        >[特惠] 毛衣+直筒裤，才是YYDS。</a
+                                    >
+                                </li>
+                                <li>
+                                    <a href="#"
+                                        >[特惠] 超大容量的满足感来啥子于</a
+                                    >
+                                </li>
+                                <li>
+                                    <a href="#"
+                                        >[特惠] 每日一件，衣柜满到塞不下。</a
+                                    >
+                                </li>
+                                <li>
+                                    <a href="#"
+                                        >[特惠] 媳妇儿再买，我就疯给他看。</a
+                                    >
+                                </li>
                             </ul>
                         </div>
                     </div>
-<!-- 注意！！！！！！！一下的图片应该使用精灵图位移来实现！ -->
+                    <!-- 注意！！！！！！！一下的图片应该使用精灵图位移来实现！ -->
                     <!-- 下方的导航区 -->
                     <div class="other_nav">
                         <ul class="other_nav_list clearfix">
                             <li>
-                                <div><img src="../resources/icon_话费_nor.png"></div>
+                                <div>
+                                    <img src="../resources/icon_话费_nor.png" />
+                                </div>
                                 <a href="#">话费</a>
                             </li>
                             <li>
-                                <div><img src="../resources/icon_huoche.png"></div>
+                                <div>
+                                    <img src="../resources/icon_huoche.png" />
+                                </div>
                                 <a href="#">火车票</a>
                             </li>
                             <li>
-                                <div><img src="../resources/icon_加油卡_nor.png"></div>
+                                <div>
+                                    <img
+                                        src="../resources/icon_加油卡_nor.png"
+                                    />
+                                </div>
                                 <a href="#">加油卡</a>
                             </li>
                             <li>
-                                <div><img src="../resources/icon_白条_nor.png"></div>
+                                <div>
+                                    <img src="../resources/icon_白条_nor.png" />
+                                </div>
                                 <a href="#">白条</a>
                             </li>
                         </ul>
                         <ul class="other_nav_list clearfix">
                             <li>
-                                <div><img src="../resources/icon_电影票_nor.png"></div>
+                                <div>
+                                    <img
+                                        src="../resources/icon_电影票_nor.png"
+                                    />
+                                </div>
                                 <a href="#">电影票</a>
                             </li>
                             <li>
-                                <div><img src="../resources/icon_酒店_nor.png"></div>
+                                <div>
+                                    <img src="../resources/icon_酒店_nor.png" />
+                                </div>
                                 <a href="#">酒店</a>
                             </li>
                             <li>
-                                <div><img src="../resources/icon_理财_nor.png"></div>
+                                <div>
+                                    <img src="../resources/icon_理财_nor.png" />
+                                </div>
                                 <a href="#">理财</a>
                             </li>
                             <li>
-                                <div><img src="../resources/icon_机票_nor.png"></div>
+                                <div>
+                                    <img src="../resources/icon_机票_nor.png" />
+                                </div>
                                 <a href="#">机票</a>
                             </li>
                         </ul>
                         <ul class="other_nav_list clearfix">
                             <li>
-                                <div><img src="../resources/icon_礼品卡_nor.png"></div>
+                                <div>
+                                    <img
+                                        src="../resources/icon_礼品卡_nor.png"
+                                    />
+                                </div>
                                 <a href="#">礼品卡</a>
                             </li>
                             <li>
-                                <div><img src="../resources/icon_彩票_nor.png"></div>
+                                <div>
+                                    <img src="../resources/icon_彩票_nor.png" />
+                                </div>
                                 <a href="#">彩票</a>
                             </li>
                             <li>
-                                <div><img src="../resources/icon_游戏_nor.png"></div>
+                                <div>
+                                    <img src="../resources/icon_游戏_nor.png" />
+                                </div>
                                 <a href="#">游戏</a>
                             </li>
                             <li>
-                                <div><img src="../resources/icon_众筹_nor.png"></div>
+                                <div>
+                                    <img src="../resources/icon_众筹_nor.png" />
+                                </div>
                                 <a href="#">众筹</a>
                             </li>
                         </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- 图片展示区 -->
+        <div class="picture_show">
+            <div class="container clearfix">
+                <img src="../resources/seckill.png" />
+                <img src="../resources/banner1.png" />
+                <img src="../resources/banner2.png" />
+                <img src="../resources/banner3.png" />
+                <img src="../resources/baner4.png" />
+            </div>
+        </div>
+
+        <!-- 网页区，楼层1 -->
+        <div class="floor">
+            <div class="container">
+                <!-- 上侧 -->
+                <div class="floor_header clearfix">
+                    <div class="left_header leftfix">家用电器</div>
+                    <div class="right_header rightfix">
+                        <ul>
+                            <li><a href="#">热门</a></li>
+                            <li><a href="#">大家电</a></li>
+                            <li><a href="#">生活家电</a></li>
+                            <li><a href="#">厨房电器</a></li>
+                            <li><a href="#">应季电器</a></li>
+                            <li><a href="#">空气/净水</a></li>
+                            <li><a href="#">高端电器</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <!-- 下侧 -->
+                <div class="floor_content">
+                    <div class="container clearfix">
+                        <!-- 最左侧 -->
+                        <div class="item1 leftfix">
+                            <div class="item1_top clearfix">
+                                <div class="item1_list list1">
+                                    <!-- TODO:改为a标签 -->
+                                    <div class="left_item">节能补贴</div>
+                                    <div class="right_item">4K电视</div>
+                                </div>
+
+                                <div class="item1_list list2">
+                                    <div class="left_item">空气净化器</div>
+                                    <div class="right_item">IH电饭煲</div>
+                                </div>
+
+                                <div class="item1_list list3">
+                                    <div class="left_item">滚筒洗衣机</div>
+                                    <div class="right_item">电热水器</div>
+                                </div>
+                            </div>
+                            <div class="item1_bottom">
+                                <img src="../resources/编组.png" alt="编组" />
+                            </div>
+                        </div>
+
+                        <div class="item2 leftfix">
+                            <img src="../resources/appliance_banner07.png" />
+                        </div>
+
+                        <div class="item3 leftfix">
+                            <img src="../resources/微波炉.png" alt="微波炉" />
+                            <img
+                                src="../resources/空气炸锅.png"
+                                alt="空气炸锅"
+                            />
+                        </div>
+                        <div class="item4 leftfix">
+                            <img src="../resources/冰箱.png" alt="冰箱" />
+                        </div>
+
+                        <div class="item5 leftfix">
+                            <img src="../resources/电饭煲.png" alt="电饭煲" />
+                            <img src="../resources/电饭煲2.png" alt="电饭煲2" />
+                        </div>
                     </div>
                 </div>
             </div>
