style(html): 优化标签语义及样式调整
- 移除 .picture_show 中的 background-color 样式
- 修改 .floor_content .item1_list 内部 div 选择器为 a 标签选择器
- 将 index.html 中 item1_list 内部的 div 标签替换为 a 标签以改善语义
- 移除 HTML 结尾多余空行提高代码整洁度

--- a/尚品汇项目开发/html/index.html
+++ b/尚品汇项目开发/html/index.html
@@ -368,18 +368,18 @@
                             <div class="item1_top clearfix">
                                 <div class="item1_list list1">
                                     <!-- TODO:改为a标签 -->
-                                    <div class="left_item">节能补贴</div>
-                                    <div class="right_item">4K电视</div>
+                                    <a class="left_item">节能补贴</a>
+                                    <a class="right_item">4K电视</a>
                                 </div>
 
                                 <div class="item1_list list2">
-                                    <div class="left_item">空气净化器</div>
-                                    <div class="right_item">IH电饭煲</div>
+                                    <a class="left_item">空气净化器</a>
+                                    <a class="right_item">IH电饭煲</a>
                                 </div>
 
                                 <div class="item1_list list3">
-                                    <div class="left_item">滚筒洗衣机</div>
-                                    <div class="right_item">电热水器</div>
+                                    <a class="left_item">滚筒洗衣机</a>
+                                    <a class="right_item">电热水器</a>
                                 </div>
                             </div>
                             <div class="item1_bottom">
@@ -408,6 +408,8 @@
                         </div>
                     </div>
                 </div>
+
+                
             </div>
         </div>
     </body>
